Small padding on ScenarioLibrary icon to fix alignment

--- a/fitnesse/resources/bootstrap-plus/less/dark/customize.less
+++ b/fitnesse/resources/bootstrap-plus/less/dark/customize.less
@@ -682,6 +682,10 @@ fieldset {
   color: #f9ff47;
 }
 
+.icon-scenariolib:before {
+  padding: 0 2px 0 2px;
+}
+
 .contents li {
   list-style-type: none;
 }
