--- a/fitnesse/resources/bootstrap-plus/less/light/customize.less
+++ b/fitnesse/resources/bootstrap-plus/less/light/customize.less
@@ -611,6 +611,10 @@ font-size:12px;
   color: #005bef;
 }
 
+.icon-scenariolib:before {
+  padding: 0 2px 0 2px;
+}
+
 .contents li {
   list-style-type: none;
 }
